# o2

./: .gitignore  .gitmodules  CMakeLists.txt  CompressToolsConfig.json  CurrentSettings.vssettings  FindOpenGLES2.cmake  LICENSE  README.md  _config.yml  configure.bat  index.html  my settings.vssettings  o2Editor.lnk  params.json  settings.vssettings  settings2.vssettings
.github/workflows/: cmake-single-platform.yml
AssetsBuildTool/: CMakeLists.txt  CodeToolCache.xml
AssetsBuildTool/Sources/: AssetsBuildTool.cpp  CodeToolCache.xml
AssetsBuildTool/Sources/o2AssetBuilder/: AssetsBuilder.cpp  AssetsBuilder.h  AssetsBuilderRunner.cpp  ImageCompressor.cpp  ImageCompressor.h
AssetsBuildTool/Sources/o2AssetBuilder/Converters/: AtlasAssetConverter.cpp  AtlasAssetConverter.h  FolderAssetConverter.cpp  FolderAssetConverter.h  IAssetConverter.cpp  IAssetConverter.h  ImageAssetConverter.cpp  ImageAssetConverter.h  StdAssetConverter.cpp  StdAssetConverter.h
CodeTool/: CMakeLists.txt  CodeTool.sln  CodeTool.vcxproj  CodeTool.vcxproj.filters  build.sh
CodeTool/CodeTool.xcodeproj/: project.pbxproj
CodeTool/CodeTool.xcodeproj/project.xcworkspace/xcuserdata/playrix.xcuserdatad/: UserInterfaceState.xcuserstate
CodeTool/CodeTool.xcodeproj/xcshareddata/xcschemes/: CodeTool.xcscheme
CodeTool/CodeTool.xcodeproj/xcuserdata/playrix.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CodeTool/CodeTool.xcodeproj/xcuserdata/playrix.xcuserdatad/xcschemes/: xcschememanagement.plist
CodeTool/Sources/: BasicUIStyle.cpp  CodeToolApp.cpp  CodeToolApp.h  ReflectionGenerated.cpp  ReflectionGenerated.h
CodeTool/Sources/SyntaxTree/: CppSyntaxParser.cpp  CppSyntaxParser.h  SyntaxTree.cpp  SyntaxTree.h
CodeTool/Sources/Windows/: CodeTool.cpp
CodeTool/Src/: CodeTool.cpp  CodeToolApp.cpp  CodeToolApp.h  CppSyntaxParser.cpp  CppSyntaxParser.h  SyntaxTree.cpp  SyntaxTree.h
CodeTool/Src/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
Docs/: o2 Editor Workflow.ai
Docs/ru/: main.md
Editor/Assets/: BasicAtlas.atlas  SimulationDevicesList.json  myriad.xml
Editor/Sources/: CodeToolCache.xml
Framework/3rdPartyLibs/: CMakeLists.txt  CheckGCCVersion.cmake
Framework/3rdPartyLibs/Box2D/Common/: b2Math.h
Framework/3rdPartyLibs/Box2D/Rope/: b2Rope.cpp
Framework/3rdPartyLibs/FreeType/: CMakeLists.txt  freetype.cmake
Framework/3rdPartyLibs/Spine/: CMakeLists.txt  flags.cmake
Framework/3rdPartyLibs/Spine/spine-cpp/include/spine/: SkeletonBounds.h
Framework/3rdPartyLibs/Spine/spine-cpp/src/spine/: AnimationState.cpp  Atlas.cpp  SequenceTimeline.cpp  SkeletonBinary.cpp  SkeletonBounds.cpp  SkeletonJson.cpp
Framework/3rdPartyLibs/StackWalker/: CMakeLists.txt  StackWalker.cpp
Framework/3rdPartyLibs/boost/: CMakeLists.txt
Framework/3rdPartyLibs/jerryscript/jerry-core/debugger/: debugger.c
Framework/3rdPartyLibs/jerryscript/jerry-core/parser/regexp/: re-compiler.h
Framework/3rdPartyLibs/jerryscript/jerry-ext/include/jerryscript-ext/: debugger.h  handler.h
Framework/3rdPartyLibs/jerryscript/jerry-main/: main-unix.c
Framework/3rdPartyLibs/jerryscript/jerry-port/default/include/: jerryscript-port-default.h
Framework/3rdPartyLibs/jerryscript/tests/jerry/: date-utc.js  func-decl.js
Framework/3rdPartyLibs/jerryscript/tools/unit-tests/: Makefile
Framework/3rdPartyLibs/libpng/: CMakeLists.txt  png.h  pngconf.h
Framework/3rdPartyLibs/pthreads/: version.res
Framework/3rdPartyLibs/pthreads/tests/: sizes.vse
Framework/3rdPartyLibs/pugixml/: CMakeLists.txt  pugiconfig.hpp
Framework/3rdPartyLibs/zlib/: CMakeLists.txt  ioapi.c  unzip.h
Old Sources/src/: engine_settings.h
ScriptUtils/: ReplaceTabsToSpaces.py
Templates/EmptyProject/: ProjectSettings.xml
Tests/Sources/: TestApplication.cpp  TestApplication.h  TestsMain.cpp
UI/: UI2.ai  UI3.ai  UI4.ai  symbols.ai
UI/Photoshop/: CurveHandle.psd  CurveSupportHandle.psd
data/: config.xml
o2CodeTool/: o2CodeTool.sln
o2CodeTool/o2CodeTool/: CppLexParser.cs  CppLexStructure.cs  CppReflectionGeneration.cs  Program.cs  o2CodeTool.csproj
o2Editor/: EditorConfig.xml  ProjectSettings.xml
o2Editor/Assets/: Actor #1 copy.prefab  Actor #1.prefab  Actor #1.proto  Actor #10 copy 1.prefab  Actor #10.prefab  Child actor #2.prefab  Sub Child actor #3 copy.prefab  Sub Child actor #3.prefab  editor_ui_style.xml  hero_cat.proto  hero_cat_ring.proto  hero_cat_ring_lapka.proto  hero_ring.proto  lapa_blue.proto  main dock.proto  standard.proto  ui_style.xml
o2Editor/AssetsBlank/: editor_ui_style.xml  hero_cat.proto  hero_cat_ring.proto  hero_cat_ring_arrow.proto  hero_ring.proto  lapa_blue.proto  lapa_blue_arrow.proto  ui_style.xml
o2Editor/Sources/: ApplicationConfig.cpp  ApplicationConfig.h  CodeToolCache.xml  EditorApplication.cpp  EditorApplication.h  MainTestScreen.cpp  ReflectionGenerated.cpp  ReflectionGenerated.h  TestApplication.cpp  TextTestScreen.h  UITestScreen.cpp  UITestScreen.h  WindowsManager.h  stdafx.h
o2Engine/Sources/: CodeToolCache.xml  EngineSettings.cpp  EngineSettings.h  O2.h  stdafx.h
o2Engine/Windows/: o2.natvis  o2Engine.vcxproj.filters  o2engine.vcxproj  o2engine.vcxproj.filters
o2Engine/dependencies/: Dependencies_Debug.idb  FreeType_Debug.lib  FreeType_Release.lib
o2TestProject/Assets/: basic_ui_style.xml  hero_ring.proto  ui_style.xml
o2TestProject/AssetsBlank/: ui_style.xml
o2TestProject/Sources/: BasicUIStyle.cpp  BasicUIStyle.h  CodeToolCache.xml  ITestScreen.cpp  ITestScreen.h  MainTestScreen.cpp  MainTestScreen.h  ReflectionGenerated.cpp  TestApplication.cpp  TestApplication.h  TextTestScreen.cpp  TextTestScreen.h  UIStyleBuilding.cpp  UIStyleBuilding.h  UITestScreen.cpp  UITestScreen.h
o2TestWindows/: o2TestWindows.vcxproj  o2TestWindows.vcxproj.filters  o2test.sln  render_log.txt  test_serialization.xml
o2TestWindows/src/: main_win.cpp  man.cpp  man.h  man_field.cpp  man_field.h  path_web.cpp  path_web.h  test_app.cpp  test_app.h
o2engine/: o2.natvis
o2engine/Sources/: EngineSettings.h  O2.h  ReflectionGenerated.cpp
o2engine/dependencies/Json/other/: CMakeLists.txt  astylerc
(+2952 files in other folders)
