project(3rdParties)

# warings and errors
if (MSVC)
    add_compile_options(/W2)
else()
    add_compile_options(-Wall -Wno-error=format -Wno-error=format-extra-args -Wno-error=conversion
            -Wno-error=incompatible-pointer-types -Wno-error=sign-conversion -Wno-error=pointer-sign)
endif()

set(BOX2D_BUILD_STATIC TRUE)
set(BOX2D_VERSION 1)

# jerry settings
set(JERRY_CMDLINE           OFF)
set(JERRY_CMDLINE_TEST      OFF)
set(JERRY_CMDLINE_SNAPSHOT  OFF)
set(JERRY_LIBFUZZER         OFF)
set(JERRY_PORT_DEFAULT      ON )
set(JERRY_EXT               ON )
set(JERRY_MATH              OFF)
set(UNITTESTS               OFF)
set(DOCTESTS                OFF)

set(BUILD_SHARED_LIBS         OFF)
set(ENABLE_AMALGAM            OFF)
set(ENABLE_LTO                ON )
set(ENABLE_STRIP              ON )
set(ENABLE_COMPILE_COMMANDS   ON )

set(JERRY_CPOINTER_32_BIT           ON )
set(JERRY_DEBUGGER                  ON )
set(JERRY_ERROR_MESSAGES            ON )
set(JERRY_EXTERNAL_CONTEXT          OFF)
set(JERRY_PARSER                    ON )
set(JERRY_LINE_INFO                 ON )
set(JERRY_LOGGING                   ON )
set(JERRY_MEM_STATS                 ON )
set(JERRY_MEM_GC_BEFORE_EACH_ALLOC  OFF)
set(JERRY_PARSER_DUMP_BYTE_CODE     OFF)
set(JERRY_PROFILE                   "es.next")
set(JERRY_REGEXP_STRICT_MODE        OFF)
set(JERRY_REGEXP_DUMP_BYTE_CODE     OFF)
set(JERRY_SNAPSHOT_EXEC             OFF)
set(JERRY_SNAPSHOT_SAVE             OFF)
set(JERRY_SYSTEM_ALLOCATOR          OFF)
set(JERRY_VALGRIND                  OFF)
set(JERRY_VM_EXEC_STOP              OFF)
set(JERRY_GLOBAL_HEAP_SIZE          "(5120)")
set(JERRY_GC_LIMIT                  "(0)"   )
set(JERRY_STACK_LIMIT               "(0)"   )
set(JERRY_GC_MARK_LIMIT             "(8)"   )

add_subdirectory(Box2D)
add_subdirectory(jerryscript)
add_subdirectory(libpng)
add_subdirectory(zlib)
add_subdirectory(FreeType)
add_subdirectory(pugixml)

if(MSVC)
    target_compile_options(Box2D PRIVATE "/MP")
    target_compile_options(jerry-core PRIVATE "/MP")
    target_compile_options(jerry-ext PRIVATE "/MP")
    target_compile_options(jerry-port-default PRIVATE "/MP")
    target_compile_options(libpng PRIVATE "/MP")
    target_compile_options(zlib PRIVATE "/MP")
    target_compile_options(FreeType PRIVATE "/MP")
    target_compile_options(pugixml PRIVATE "/MP")
endif()

set_target_properties(Box2D PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(jerry-core PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(jerry-ext PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(jerry-port-default PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(amalgam PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(libpng PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(zlib PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(FreeType PROPERTIES FOLDER o2/3rdPartyLibs)
set_target_properties(pugixml PROPERTIES FOLDER o2/3rdPartyLibs)