project(boost)

add_subdirectory(assert)
add_subdirectory(config)
add_subdirectory(container_hash)
add_subdirectory(core)
add_subdirectory(describe)
add_subdirectory(mp11)
add_subdirectory(predef)
add_subdirectory(stacktrace)
add_subdirectory(static_assert)
add_subdirectory(throw_exception)
add_subdirectory(winapi)

set_target_properties(boost_assert PROPERTIES FOLDER o2/3rdPartyLibs/boost)
set_target_properties(boost_core PROPERTIES FOLDER o2/3rdPartyLibs/boost)
set_target_properties(boost_stacktrace_basic PROPERTIES FOLDER o2/3rdPartyLibs/boost)
set_target_properties(boost_stacktrace_noop PROPERTIES FOLDER o2/3rdPartyLibs/boost)
set_target_properties(boost_stacktrace_windbg PROPERTIES FOLDER o2/3rdPartyLibs/boost)