project(boost)

if (WIN32)
    set(BOOST_STACKTRACE_ENABLE_NOOP ON CACHE BOOL "" FORCE)
    set(BOOST_STACKTRACE_ENABLE_WINDBG ON CACHE BOOL "" FORCE)
else()
    set(BOOST_STACKTRACE_ENABLE_NOOP OFF CACHE BOOL "" FORCE)
    set(BOOST_STACKTRACE_ENABLE_WINDBG OFF CACHE BOOL "" FORCE)
endif()

add_subdirectory(assert)
add_subdirectory(config)
add_subdirectory(container_hash)
add_subdirectory(core)
add_subdirectory(describe)
add_subdirectory(mp11)
add_subdirectory(predef)
add_subdirectory(stacktrace)
add_subdirectory(static_assert)
add_subdirectory(throw_exception)
add_subdirectory(winapi)

set_target_properties(boost_assert PROPERTIES FOLDER o2/3rdPartyLibs/boost)
set_target_properties(boost_core PROPERTIES FOLDER o2/3rdPartyLibs/boost)
set_target_properties(boost_stacktrace_basic PROPERTIES FOLDER o2/3rdPartyLibs/boost)

if (WIN32)
    set_target_properties(boost_stacktrace_windbg PROPERTIES FOLDER o2/3rdPartyLibs/boost)
    set_target_properties(boost_stacktrace_noop PROPERTIES FOLDER o2/3rdPartyLibs/boost)
endif()